[PE] Cached subsequence should retain previous paint result

If a subsequence previously partially painted, when we use the cached
without repainting, we should still treat the layer as partially
painted, otherwise we'll fail to repaint on paint dirty rect change.

Bug: 898435
Change-Id: I27ec2689377aaf408a819f2849675640c439fcd9
Reviewed-on: https://chromium-review.googlesource.com/c/1329701
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607041}
Former-commit-id: 9fccf8f9603f9dd5766fe64db8a5cdbd9fb550c2